RESOLVED FIXED193562
[LFC] Do not skip float boxes that are not part of the current formatting context when computing bottom.
https://bugs.webkit.org/show_bug.cgi?id=193562
Summary [LFC] Do not skip float boxes that are not part of the current formatting con...
alan
Reported 2019-01-17 21:49:42 PST
When computing the bottom value (height computation) the current floating context's (float) boxes could belong to descendant formatting contexts. Include them as well while computing bottom. see -> <div style="overflow: hidden"><div>foo<div style="float: left">bar</div></div></div>
Attachments
Patch (5.37 KB, patch)
2019-01-17 22:00 PST, alan
koivisto: review+
Archive of layout-test-results from ews116 for mac-highsierra (1.98 MB, application/zip)
2019-01-17 23:46 PST, EWS Watchlist
no flags
alan
Comment 1 2019-01-17 22:00:17 PST
EWS Watchlist
Comment 2 2019-01-17 23:46:00 PST
Comment on attachment 359447 [details] Patch Attachment 359447 [details] did not pass mac-debug-ews (mac): Output: https://webkit-queues.webkit.org/results/10792709 New failing tests: compositing/backing/animate-into-view.html
EWS Watchlist
Comment 3 2019-01-17 23:46:01 PST
Created attachment 359454 [details] Archive of layout-test-results from ews116 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews116 Port: mac-highsierra Platform: Mac OS X 10.13.6
alan
Comment 4 2019-01-18 06:40:05 PST
Radar WebKit Bug Importer
Comment 5 2019-01-18 06:41:28 PST
Note You need to log in before you can comment on or make changes to this bug.