[LFC] Do not skip float boxes that are not part of the current formatting context when computing bottom. https://bugs.webkit.org/show_bug.cgi?id=193562

Reviewed by Antti Koivisto.

Source/WebCore:

The current floating context's (float) boxes could belong to descendant formatting contexts.
We need to include them as well when computing height (bottom) (we essentially need to skip ancestor floats only).

<div id=container style="overflow: hidden"><div>foo<div style="float: left">bar</div></div></div>
While computing the height for "container", the float box needs to be taken into account even though
it is part of another (descendant) formatting context (the inline formatting context established by its parent div).

* layout/floats/FloatingState.cpp:
(WebCore::Layout::FloatingState::bottom const):
* layout/floats/FloatingState.h:
(WebCore::Layout::FloatingState::FloatItem::isDescendantOfFormattingRoot const):
(WebCore::Layout::FloatingState::FloatItem::inFormattingContext const): Deleted.

Tools:

* LayoutReloaded/misc/LFC-passing-tests.txt:

Canonical link: https://commits.webkit.org/208071@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@240145 268f45cc-cd09-0410-ab3c-d52691b4dbfc